--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Елит Имоти ООД</title>
     <meta name="keywords" content="Елит Имоти" />
+    <meta name=”viewport” content=”width=device-width, initial-scale=1″>
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet" type="text/css" media="all" />
